2004-11-08  Carlos Garcia Campos <carlosgc@gnome.org>

	* Moved gnome-cpufreq-applet to gnome-applet CVS module

2004-11-01  Carlos Garcia Campos <carlosgc@gnome.org>

	* src/cpufreq-applet.c, cpufreq-prefs.c: marked some strings as
	translatable

2004-11-01  Carlos Garcia Campos <carlosgc@gnome.org>

	* configure.in: added a summary report at the end of the configure
	script

2004-10-28  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-10-28  Carlos Garcia Campos <carlosgc@gnome.org>

	* src/cpufreq-applet.[ch], src/cpufreq.c: run the applet in cpuinfo
	mode when /sys is not mounted and /proc/cpufreq exists, but contains
	only the header

2004-10-06  Carlos Garcia Campos <carlosgc@gnome.org>

	* Released 0.3.1

2004-10-05  Carlos Garcia Campos <carlosgc@gnome.org>

	* src/cpufreq.c, src/cpufreq-selector/cpufreq-sysfs.c: there could be
	duplicated entries in scaling_available_frequencies. Created the
	list without duplicated entries

2004-10-04  Carlos Garcia Campos <carlosgc@gnome.org>

	* src/cpufreq-selector/cpufreq-sysfs.c: not always use
	scaling_cur_freq

2004-10-04  Carlos Garcia Campos <carlosgc@gnome.org>

	* src/cpufreq-prefs.c: set the right option in preferences dialog when
	switching between modes
	
2004-10-04  Carlos Garcia Campos <carlosgc@gnome.org>

	* src/cpufreq-applet.[ch]: uses size_allocate instead of
	change_size and some improvements in applet resizing
	
2004-10-04  Carlos Garcia Campos <carlosgc@gnome.org>

	* README: filled

2004-10-03  Carlos Garcia Campos <carlosgc@gnome.org>

	* src/cpufreq-selector/main.c: removed stupid debug function

2004-10-02  Carlos Garcia Campos <carlosgc@gnome.org>

	* Released 0.3

2004-10-02  Dominik Brodowski <linux@domninikbrodowski.de>

	* cpufreq-applet.[ch], cpufreq.c: allow for different, new governors.
	Proper support for ->setpolicy() style drivers still missing. Use
	scaling_cur_freq for determining current CPU frequency when it's
	necessary
	