@@ -536,28 +536,40 @@ cpufreq_change_orient_cb (PanelApplet *pa, PanelAppletOrient orient, gpointer gd
 }
 
 static void
-cpufreq_background_changed (PanelApplet *pa, PanelAppletBackgroundType type,
-					   GdkColor *color, GdkPixmap *pixmap,
-					   CPUFreqApplet *applet)
+cpufreq_background_changed (PanelApplet *pa,
+			    PanelAppletBackgroundType type,
+			    GdkColor *color,
+			    GdkPixmap *pixmap,
+			    CPUFreqApplet *applet)
 {
-	   GtkRcStyle *rc_style = gtk_rc_style_new ();
+	   /* Taken from TrashApplet */
+	   GtkRcStyle *rc_style;
+	   GtkStyle *style;
+
+	   /* reset style */
+	   gtk_widget_set_style (GTK_WIDGET (applet), NULL);
+	   rc_style = gtk_rc_style_new ();
+	   gtk_widget_modify_style (GTK_WIDGET (applet), rc_style);
+	   g_object_unref (rc_style);
 	   
 	   switch (type) {
 	   case PANEL_PIXMAP_BACKGROUND:
-			 gtk_widget_modify_style (GTK_WIDGET (applet), rc_style);
+		   	 style = gtk_style_copy (GTK_WIDGET (applet)->style);
+			 if (style->bg_pixmap[GTK_STATE_NORMAL])
+				 g_object_unref (
+					style->bg_pixmap[GTK_STATE_NORMAL]);
+			 style->bg_pixmap[GTK_STATE_NORMAL] = g_object_ref (
+					 pixmap);
+			 gtk_widget_set_style (GTK_WIDGET (applet), style);
 			 break;
 	   case PANEL_COLOR_BACKGROUND:
-			 gtk_widget_modify_bg (GTK_WIDGET (applet), GTK_STATE_NORMAL, color);
+			 gtk_widget_modify_bg (GTK_WIDGET (applet),
+					 GTK_STATE_NORMAL, color);
 			 break;
 	   case PANEL_NO_BACKGROUND:
-			 gtk_widget_modify_style (GTK_WIDGET (applet), rc_style);
-			 break;
 	   default:
-			 gtk_widget_modify_style (GTK_WIDGET (applet), rc_style);
 			 break;
 	   }
-
-	   gtk_rc_style_unref (rc_style);
 }
 
 void
