@@ -1,3 +1,7 @@
+2004-11-09  Davyd Madeley  <davyd@madeley.id.au>
+
+	* src/cpufreq-applet.c: Support panel translucency.
+
 2004-11-08  Carlos Garcia Campos <carlosgc@gnome.org>
 
 	* Moved gnome-cpufreq-applet to gnome-applet CVS module
